# GeometryWars

./: ArchitectureNotes.md  CMakeLists.txt  README.md  config.txt
src/: Game.cpp  Game.h  Vec2.hpp  main.cpp
src/Components/: CCollision.h  CInput.h  CLifespan.h  CQuill.h  CScore.h  CShape.h  CTransform.h  Component.h
src/Core/: Core.h  Entity.h  EntityManager.hpp
